2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 * Allow access to some parts of the server request using a `jcursor`.
 * Drop MIME headers that have an underscore in their names.

2016-07-28  Kirit Saelensminde  <kirit@felspar.com>
 Add shortcut method on HTTP request for getting to the headers.

2015-11-20  Kirit Saelensminde  <kirit@felspar.com>
 Removed use of deprecated Fost APIs.

2015-10-20  Kirit Saelensminde  <kirit@felspar.com>
 Make sure the web server logs an error message when it catches an excepion.

2015-05-10  Kirit Saelensminde  <kirit@felspar.com>
 Remove all uses of auto_ptr. Replace some with move semantics, others with unique_ptr.

2015-05-06  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up the tests to use the new service API on the network connections.

2015-04-30  Kirit Saelensminde  <kirit@felspar.com>
 Changed the way that Boost ASIO IO services are used so that server accept sockets can be serviced totally independantly. This is an ugly workaround for the problem, but does at least cause all requests to be properly serviced.
 Revert the change from 2015-04-24

2015-04-24  Kirit Saelensminde  <kirit@felspar.com>
 Make sure that a server io_service is properly associated with the connection. This also changes client sockets to all share a single io_service.

2015-03-29  Kirit Saelensminde  <kirit@felspar.com>
 Allow apostrophes in the `fostlib::url::filepath_string` strings.

2014-11-26  Kirit Saelensminde  <kirit@felspar.com>
 Allow MIME binary bodies to be made from start/end memory pointers.

2014-11-05  Kirit Saelensminde  <kirit@felspar.com>
 Only set Date and Host headers if they're not already set.

2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Be absolutely sure that the URL parser lock is held when the parsers destruct.

2014-05-29  Kirit Saelensminde  <kirit@felspar.com>
 Added ampersand to allowed characters in the file path of a HTTP request on the server.

2014-05-22  Kirit Saelensminde  <kirit@felspar.com>